# market-intelligence-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: task.md
data/benchmarks/: sec_retrieval_questions.json
data/evaluations/: sec_retrieval_notes.md
data/manifests/: sec_mvp_manifest.jsonl  sec_mvp_seeds.json
docs/: project_plan.md
src/market_intelligence_rag/: benchmarks.py  chunking.py  cli.py  embeddings.py  generation.py  manifest.py  models.py  qdrant_store.py  sec.py  settings.py  storage.py  text_processing.py
tests/: test_benchmarks.py  test_generation.py  test_sec.py  test_text_processing.py
