[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intelligence-rag"
version = "0.1.0"
description = "CLI-first SEC ingestion and retrieval pipeline for market intelligence RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "openai>=1.30,<2",
  "qdrant-client>=1.9,<2",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
market-rag = "market_intelligence_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
